@@ -171,6 +171,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.2.2</version>
@@ -217,15 +223,6 @@
 			<groupId>org.postgis</groupId>
 			<artifactId>postgis-jdbc</artifactId>
 			<version>1.3.2</version>
-		</dependency>
-
-		<!--
-			TODO tools.bzip2 is not available in a public maven repository yet
-		-->
-		<dependency>
-			<groupId>org.openstreetmap.osmosis.org.apache.tools</groupId>
-			<artifactId>bzip2</artifactId>
-			<version>20090327</version>
 		</dependency>
 
 		<!-- JDBC Drivers -->
